# Issue_tracker_api

./: README.md  alembic.ini  cleanup.py  pyproject.toml  pytest.ini  requirements.txt  run_dev.py
alembic/: env.py
alembic/versions/: 001_initial_migration_create_all_tables.py  002_add_labels_and_issue_labels.py
app/: database.py  main.py
app/models/: __init__.py  attachment.py  base.py  comment.py  issue.py  issue_label.py  label.py  project.py  user.py
app/routers/: __init__.py  attachments.py  attachments_minimal.py  comments.py  comments_minimal.py  issues.py  issues_minimal.py  issues_simple.py  projects.py  projects_minimal.py  reports.py  users.py  users_minimal.py
app/schemas/: __init__.py  attachment.py  bulk_operations.py  comment.py  common.py  csv_import.py  issue.py  issue_detail.py  label.py  label_assignment.py  project.py  timeline.py  user.py
app/services/: attachment_service.py  base_service.py  comment_service.py  issue_service.py  label_service.py  project_service.py  report_service.py  timeline_service.py  user_service.py
tests/: __init__.py  conftest.py
